--- a/notebooks/prepare_data.ipynb
+++ b/notebooks/prepare_data.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "4  15        Boyacá  2016         590818         609160  1199978"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "231"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "[231 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "1.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "(33, 33)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "       54, 63, 66, 68, 70, 73, 76, 81, 85, 86, 88, 91, 94, 95, 97, 99])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
        "99                     Vichada"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
        "26"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
        "4   5  Antioquia           5030       Amagá  2016           Total    29394"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
        "[7854 rows x 3 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -940,68 +940,88 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>DP</th>\n",
-       "      <th>MPNOM</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>COD_MUNICIPIO</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>MPNOM</th>\n",
+       "      <th>DP</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5001</th>\n",
-       "      <td>5</td>\n",
+       "      <th>0</th>\n",
+       "      <td>5001</td>\n",
        "      <td>Medellín</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5002</th>\n",
-       "      <td>5</td>\n",
+       "      <th>1</th>\n",
+       "      <td>5002</td>\n",
        "      <td>Abejorral</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5004</th>\n",
-       "      <td>5</td>\n",
+       "      <th>2</th>\n",
+       "      <td>5004</td>\n",
        "      <td>Abriaquí</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5021</th>\n",
-       "      <td>5</td>\n",
+       "      <th>3</th>\n",
+       "      <td>5021</td>\n",
        "      <td>Alejandría</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5030</th>\n",
-       "      <td>5</td>\n",
+       "      <th>4</th>\n",
+       "      <td>5030</td>\n",
        "      <td>Amagá</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               DP       MPNOM\n",
-       "COD_MUNICIPIO                \n",
-       "5001            5    Medellín\n",
-       "5002            5   Abejorral\n",
-       "5004            5    Abriaquí\n",
-       "5021            5  Alejandría\n",
-       "5030            5       Amagá"
+       "   COD_MUNICIPIO       MPNOM  DP\n",
+       "0           5001    Medellín   5\n",
+       "1           5002   Abejorral   5\n",
+       "2           5004    Abriaquí   5\n",
+       "3           5021  Alejandría   5\n",
+       "4           5030       Amagá   5"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "municipalities = mun_pop[[\"DP\", \"COD_MUNICIPIO\", \"MPNOM\"]].drop_duplicates().set_index(\"COD_MUNICIPIO\")\n",
+    "municipalities = mun_pop[[\"COD_MUNICIPIO\", \"MPNOM\", \"DP\"]].replace({\"Barrancominas (CD)\": \"Barrancominas\"}).drop_duplicates()\n",
     "municipalities.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1122, 1122)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(municipalities[\"COD_MUNICIPIO\"].drop_duplicates()), len(municipalities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1026,45 +1046,45 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>DP</th>\n",
+       "      <th>COD_MUNICIPIO</th>\n",
        "      <th>MPNOM</th>\n",
        "      <th>LEN</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>COD_MUNICIPIO</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>25843</th>\n",
-       "      <td>25</td>\n",
-       "      <td>Villa de San Diego de Ubaté</td>\n",
-       "      <td>27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47692</th>\n",
+       "      <th>678</th>\n",
        "      <td>47</td>\n",
+       "      <td>47692</td>\n",
        "      <td>San Sebastián de Buenavista</td>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25645</th>\n",
+       "      <th>562</th>\n",
        "      <td>25</td>\n",
+       "      <td>25843</td>\n",
+       "      <td>Villa de San Diego de Ubaté</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>534</th>\n",
+       "      <td>25</td>\n",
+       "      <td>25645</td>\n",
        "      <td>San Antonio del Tequendama</td>\n",
        "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23586</th>\n",
-       "      <td>23</td>\n",
-       "      <td>Purísima de La Concepción</td>\n",
+       "      <th>95</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5664</td>\n",
+       "      <td>San Pedro de Los Milagros</td>\n",
        "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5664</th>\n",
-       "      <td>5</td>\n",
-       "      <td>San Pedro de Los Milagros</td>\n",
+       "      <th>447</th>\n",
+       "      <td>23</td>\n",
+       "      <td>23586</td>\n",
+       "      <td>Purísima de La Concepción</td>\n",
        "      <td>25</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1072,16 +1092,15 @@
        "</div>"
       ],
       "text/plain": [
-       "               DP                        MPNOM  LEN\n",
-       "COD_MUNICIPIO                                      \n",
-       "25843          25  Villa de San Diego de Ubaté   27\n",
-       "47692          47  San Sebastián de Buenavista   27\n",
-       "25645          25   San Antonio del Tequendama   26\n",
-       "23586          23    Purísima de La Concepción   25\n",
-       "5664            5    San Pedro de Los Milagros   25"
+       "     DP  COD_MUNICIPIO                        MPNOM  LEN\n",
+       "678  47          47692  San Sebastián de Buenavista   27\n",
+       "562  25          25843  Villa de San Diego de Ubaté   27\n",
+       "534  25          25645   San Antonio del Tequendama   26\n",
+       "95    5           5664    San Pedro de Los Milagros   25\n",
+       "447  23          23586    Purísima de La Concepción   25"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1135,7 @@
        "Name: ARMAS MEDIOS, dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,16 +1157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "27"
+       "19"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1190,7 @@
        "Name: GRUPO ETARIO, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
