fix municipalities table

--- a/notebooks/database.ipynb
+++ b/notebooks/database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "dict_keys(['password', 'dbname', 'engine', 'port', 'dbInstanceIdentifier', 'host', 'username'])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "('PostgreSQL 13.4 on aarch64-unknown-linux-gnu, compiled by gcc (GCC) 7.3.1 20180712 (Red Hat 7.3.1-6), 64-bit',)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,20 +70,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[RealDictRow([('name', 'Carolina'),\n",
+       "              ('code', 5150),\n",
+       "              ('lat', Decimal('0')),\n",
+       "              ('lon', Decimal('0'))]),\n",
+       " RealDictRow([('name', 'Yondó'),\n",
+       "              ('code', 5893),\n",
+       "              ('lat', Decimal('0')),\n",
+       "              ('lon', Decimal('0'))]),\n",
+       " RealDictRow([('name', 'San Vicente'),\n",
+       "              ('code', 5674),\n",
+       "              ('lat', Decimal('0')),\n",
+       "              ('lon', Decimal('0'))]),\n",
+       " RealDictRow([('name', 'Caramanta'),\n",
+       "              ('code', 5145),\n",
+       "              ('lat', Decimal('5.54853427166')),\n",
+       "              ('lon', Decimal('-75.6438712654'))]),\n",
+       " RealDictRow([('name', 'Jardín'),\n",
+       "              ('code', 5364),\n",
+       "              ('lat', Decimal('5.59753984677')),\n",
+       "              ('lon', Decimal('-75.8189807815'))])]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from psycopg2.extras import RealDictCursor\n",
+    "\n",
+    "query = \"\"\"--sql\n",
+    "    SELECT\n",
+    "        name,\n",
+    "        code,\n",
+    "        CASE WHEN latitude = 'NaN' THEN 0 ELSE latitude END AS lat,\n",
+    "        CASE WHEN longitude = 'NaN' THEN 0 ELSE longitude END AS lon\n",
+    "    FROM municipalities\n",
+    "    WHERE department_id = 5\n",
+    "    ORDER BY lat ASC\n",
+    "    LIMIT 5\n",
+    "\"\"\"\n",
+    "\n",
+    "try:\n",
+    "    cursor = conn.cursor(cursor_factory=RealDictCursor)\n",
+    "    cursor.execute(query)\n",
+    "    res = cursor.fetchall()\n",
+    "    conn.commit()\n",
+    "except:\n",
+    "    res = []\n",
+    "    conn.rollback()\n",
+    "\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "drop_statement = \"\"\"--sql\n",
-    "    DROP TABLE municipalities\n",
-    "    \"\"\"\n",
+    "# drop_statement = \"\"\"--sql\n",
+    "#     DROP TABLE municipalities\n",
+    "#     \"\"\"\n",
     "\n",
-    "try:\n",
-    "    cur.execute(drop_statement)\n",
-    "    conn.commit()\n",
-    "except Exception as e:\n",
-    "    print(e)\n",
-    "    conn.rollback()\n"
+    "# try:\n",
+    "#     cur.execute(drop_statement)\n",
+    "#     conn.commit()\n",
+    "# except Exception as e:\n",
+    "#     print(e)\n",
+    "#     conn.rollback()\n"
    ]
   },
   {
