add municipality population

--- a/notebooks/database.ipynb
+++ b/notebooks/database.ipynb
@@ -70,35 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[RealDictRow([('name', 'Carolina'),\n",
-       "              ('code', 5150),\n",
-       "              ('lat', Decimal('0')),\n",
-       "              ('lon', Decimal('0'))]),\n",
-       " RealDictRow([('name', 'Yondó'),\n",
-       "              ('code', 5893),\n",
-       "              ('lat', Decimal('0')),\n",
-       "              ('lon', Decimal('0'))]),\n",
-       " RealDictRow([('name', 'San Vicente'),\n",
-       "              ('code', 5674),\n",
-       "              ('lat', Decimal('0')),\n",
-       "              ('lon', Decimal('0'))]),\n",
-       " RealDictRow([('name', 'Caramanta'),\n",
-       "              ('code', 5145),\n",
-       "              ('lat', Decimal('5.54853427166')),\n",
-       "              ('lon', Decimal('-75.6438712654'))]),\n",
-       " RealDictRow([('name', 'Jardín'),\n",
-       "              ('code', 5364),\n",
-       "              ('lat', Decimal('5.59753984677')),\n",
-       "              ('lon', Decimal('-75.8189807815'))])]"
+       "[RealDictRow([('name', 'Bogotá, D.C.'),\n",
+       "              ('code', 11001),\n",
+       "              ('population', 7743955)])]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,16 +90,14 @@
     "from psycopg2.extras import RealDictCursor\n",
     "\n",
     "query = \"\"\"--sql\n",
-    "    SELECT\n",
-    "        name,\n",
-    "        code,\n",
-    "        CASE WHEN latitude = 'NaN' THEN 0 ELSE latitude END AS lat,\n",
-    "        CASE WHEN longitude = 'NaN' THEN 0 ELSE longitude END AS lon\n",
-    "    FROM municipalities\n",
-    "    WHERE department_id = 5\n",
-    "    ORDER BY lat ASC\n",
-    "    LIMIT 5\n",
-    "\"\"\"\n",
+    "    SELECT \n",
+    "        m.name as name,\n",
+    "        m.code as code,\n",
+    "        mph.total as population\n",
+    "    FROM municipalities m\n",
+    "    JOIN municipalityPopulationHistory mph ON m.code = mph.municipality_id\n",
+    "    WHERE m.department_id = 11 AND mph.year = 2020\n",
+    "    \"\"\"\n",
     "\n",
     "try:\n",
     "    cursor = conn.cursor(cursor_factory=RealDictCursor)\n",
