add cases tables

--- a/notebooks/database.ipynb
+++ b/notebooks/database.ipynb
@@ -70,18 +70,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len(resultset)=704\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[RealDictRow([('name', 'Bogotá, D.C.'),\n",
-       "              ('code', 11001),\n",
-       "              ('population', 7743955)])]"
+       "[{'name': 'Montecristo',\n",
+       "  'code': 13458,\n",
+       "  'population': 15415,\n",
+       "  'suicide_attempts': 2,\n",
+       "  'latitude': Decimal('8.29724472765'),\n",
+       "  'longitude': Decimal('-74.4714158637')},\n",
+       " {'name': 'Usiacurí',\n",
+       "  'code': 8849,\n",
+       "  'population': 11713,\n",
+       "  'suicide_attempts': 3,\n",
+       "  'latitude': Decimal('10.742979811'),\n",
+       "  'longitude': Decimal('-74.9769840969')},\n",
+       " {'name': 'Pinchote',\n",
+       "  'code': 68549,\n",
+       "  'population': 5062,\n",
+       "  'suicide_attempts': 1,\n",
+       "  'latitude': Decimal('6.53206093514'),\n",
+       "  'longitude': Decimal('-73.1729190191')},\n",
+       " {'name': 'Malambo',\n",
+       "  'code': 8433,\n",
+       "  'population': 121589,\n",
+       "  'suicide_attempts': 30,\n",
+       "  'latitude': Decimal('10.856822692'),\n",
+       "  'longitude': Decimal('-74.7748637454')},\n",
+       " {'name': 'Guasca',\n",
+       "  'code': 25322,\n",
+       "  'population': 14313,\n",
+       "  'suicide_attempts': 1,\n",
+       "  'latitude': Decimal('4.86671913331'),\n",
+       "  'longitude': Decimal('-73.8771423949')},\n",
+       " {'name': 'Villamaría',\n",
+       "  'code': 17873,\n",
+       "  'population': 62261,\n",
+       "  'suicide_attempts': 36,\n",
+       "  'latitude': Decimal('5.043806686'),\n",
+       "  'longitude': Decimal('-75.513760602')},\n",
+       " {'name': 'Colombia',\n",
+       "  'code': 41206,\n",
+       "  'population': 7427,\n",
+       "  'suicide_attempts': 8,\n",
+       "  'latitude': Decimal('3.37697664839'),\n",
+       "  'longitude': Decimal('-74.8028152505')},\n",
+       " {'name': 'Ventaquemada',\n",
+       "  'code': 15861,\n",
+       "  'population': 15270,\n",
+       "  'suicide_attempts': 5,\n",
+       "  'latitude': Decimal('5.36885763606'),\n",
+       "  'longitude': Decimal('-73.5224525403')},\n",
+       " {'name': 'Marquetalia',\n",
+       "  'code': 17444,\n",
+       "  'population': 13395,\n",
+       "  'suicide_attempts': 8,\n",
+       "  'latitude': Decimal('5.29752541271'),\n",
+       "  'longitude': Decimal('-75.0530937905')},\n",
+       " {'name': 'Puerto Tejada',\n",
+       "  'code': 19573,\n",
+       "  'population': 41209,\n",
+       "  'suicide_attempts': 3,\n",
+       "  'latitude': Decimal('3.23329388435'),\n",
+       "  'longitude': Decimal('-76.4173065509')}]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,40 +157,63 @@
     "    SELECT \n",
     "        m.name as name,\n",
     "        m.code as code,\n",
-    "        mph.total as population\n",
-    "    FROM municipalities m\n",
-    "    JOIN municipalityPopulationHistory mph ON m.code = mph.municipality_id\n",
-    "    WHERE m.department_id = 11 AND mph.year = 2020\n",
-    "    \"\"\"\n",
+    "        mph.total as population,\n",
+    "        sum(sa.count) as suicide_attempts,\n",
+    "        CASE\n",
+    "            WHEN m.latitude = 'NaN' THEN NULL\n",
+    "            ELSE m.latitude\n",
+    "        END AS latitude,\n",
+    "        CASE\n",
+    "            WHEN m.longitude = 'NaN' THEN NULL\n",
+    "            ELSE m.longitude\n",
+    "        END AS longitude\n",
+    "    FROM suicideAttempts sa\n",
+    "    JOIN municipalities m \n",
+    "        ON sa.municipality_id = m.code\n",
+    "    JOIN municipalityPopulationHistory mph \n",
+    "        ON sa.municipality_id = mph.municipality_id AND sa.year = mph.year\n",
+    "    WHERE sa.year = 2016\n",
+    "    GROUP BY \n",
+    "        name, code, population\n",
+    "\"\"\"\n",
     "\n",
     "try:\n",
     "    cursor = conn.cursor(cursor_factory=RealDictCursor)\n",
     "    cursor.execute(query)\n",
     "    res = cursor.fetchall()\n",
     "    conn.commit()\n",
-    "except:\n",
-    "    res = []\n",
+    "except Exception as e:\n",
     "    conn.rollback()\n",
+    "    print(e)\n",
     "\n",
-    "res"
+    "resultset = [dict(row) for row in res]\n",
+    "print(f\"{len(resultset)=:,d}\")\n",
+    "resultset[:10]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# drop_statement = \"\"\"--sql\n",
-    "#     DROP TABLE municipalities\n",
-    "#     \"\"\"\n",
+    "delete_statement = \"\"\"--sql\n",
+    "DELETE FROM\n",
+    "    interfamilyViolence a\n",
+    "        USING interfamilyViolence b\n",
+    "WHERE\n",
+    "    a.id > b.id\n",
+    "    AND a.year = b.year\n",
+    "    AND a.count = b.count\n",
+    "    AND a.municipality_id = b.municipality_id;\n",
+    "\"\"\"\n",
     "\n",
-    "# try:\n",
-    "#     cur.execute(drop_statement)\n",
-    "#     conn.commit()\n",
-    "# except Exception as e:\n",
-    "#     print(e)\n",
-    "#     conn.rollback()\n"
+    "try:\n",
+    "    cur.execute(delete_statement)\n",
+    "    conn.commit()\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    conn.rollback()\n"
    ]
   },
   {
